@@ -38,6 +38,20 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|params
 operator|.
 name|ModifiableSolrParams
@@ -1562,6 +1576,58 @@ name|params
 argument_list|)
 argument_list|,
 literal|"*[count(//doc)=2]"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testMissingFieldParam
+specifier|public
+name|void
+name|testMissingFieldParam
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+literal|"fq"
+argument_list|,
+literal|"{!collapse}"
+argument_list|)
+expr_stmt|;
+name|assertQEx
+argument_list|(
+literal|"It should respond with a bad request when the 'field' param is missing"
+argument_list|,
+name|req
+argument_list|(
+name|params
+argument_list|)
+argument_list|,
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
 argument_list|)
 expr_stmt|;
 block|}
